<resources>
    <string name="app_name">ReferenceApp MSAL</string>
    <string name="welcome_text">Welcome, </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="csv_header_col_1">ID</string>
    <string name="csv_header_col_2">Task description</string>
    <string name="check_icon_hint">Check icon</string>
    <string name="print_name">Taskr Document</string>
    <string name="err_no_body">There was an error accessing your tasks</string>
    <string name="save_success">Saved your tasks to %s</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_single_account">SingleAccountActivity</string>

    <string name="Profile_ext">Profile</string>
    <string name="profile_displayName"><b><i>Display Name - </i></b></string>
    <string name="profile_mobileNumber"><b>Mobile Phone - </b></string>
    <string name="profile_jobTitle"><b>Job Title - </b></string>
    <string name="profile_mail"><b>Mail - </b></string>
    <string name="profile_employeeID"><b>Employee ID - </b></string>
    <string name="profile_givenName"><b>Given Name - </b></string>
    <string name="profile_officeLocation"><b>Office Location - </b></string>
    <string name="profile_businessPhones"><b>Business Phones - </b></string>
    <string name="profile_preferredLanguage"><b>Preferred Language - </b></string>
    <string name="profile_context"><b>Context - </b>https://graph.microsoft.com/v1.0/$metadata#users/$entity</string>
    <string name="profile_userPrincipalName"><b>User Principal Name - </b></string>
    <string name="profile_surname"><b>Surname - </b></string>

    <string name="bestPractice"><u>Best Practice</u></string>
    <string name="homeAppVersion">Version : </string>
    <string name="user_name">User</string>
    <string name="family_name">Family Name</string>
    <string name="displayable_name">Displayable Name</string>
    <string name="applicationVersion">Application Version: </string>
    <string name="adalVersion">MSAL Version: </string>
    <string name="intuneSDKVersion">Intune SDK Version: </string>
    <string name="identity_provider">Identity Provider</string>
    <string name="passwordchange_url">Password change URL</string>
    <string name="password_expiresdate">Password Expires on</string>
    <string name="call_graph">Sign In </string>
    <string name="sign_out">Sign Out</string>
    <string name="loading">Data displays here...</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="supportmail">Mail to: mobile.app.services@ey.com</string>

    <string name="question1">Redirect URI not matching failure​</string>
    <string name="question2">Service API used in the app is not responding​</string>
    <string name="question3">The resource principal named https://ethicsapp.ey.net/ethicsapp/ was not found in the tenant named eygs.onmicrosoft.com.</string>
    <string name="question4">MSAL On device troubleshoot​</string>
    <string name="text_expanded">Expanded</string>
    <string name="text_collapsed">Collapsed</string>

    <string name="title_activity_sp_details">sp_details</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for fragments for navigation -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="answer1">
        <item>If you are getting the above error then you have to check what redirect uri is configured for app id in the Intune portal.</item>
    </string-array>

    <string-array name="answer2">
        <item>If you are able to get the response using POST MAN Chrome tool but in your app, you are not getting the response, It happens mostly if the service domain is not configured in the Intune or required permissions are not provided for the app.​</item>
    </string-array>

    <string-array name="answer3">
        <item>This can happen if the application has not been installed by the administrator of the tenant or consented to by any user in the tenant. You might have sent your authentication request to the wrong tenant.</item>
    </string-array>

    <string-array name="answer4">
        <item>You can directly connect your Android/iOS device with your development machine and run the app from Android Studio/xCode to debug the app and based on error message it will help you to fix the issue rather deploying it to Intune portal and then debugging.</item>
    </string-array>
</resources>
