<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview_applicationversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/welcome_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#3f3f3f"
        android:textSize="50px" />

    <TextView
        android:id="@+id/textview_adalversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#3f3f3f"
        android:textSize="50px" />


    <TextView
        android:id="@+id/textview_intunesdkversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/family_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#3f3f3f"
        android:textSize="50px" />

    <TextView
        android:id="@+id/textview_appcenterversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/displayable_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#3f3f3f"
        android:textSize="50px" />

</LinearLayout>
